--- a/references.bib
+++ b/references.bib
@@ -606,6 +606,13 @@
     note = {\url{https://home.konkuk.ac.kr/~cgkang/courses/robotics/courseMaterials/DHpaper.pdf}}
 }
 
+@misc{cite_fpk_and_ipk_explained_simple, 
+    title={KINEMATIC ANALYSIS FOR ROBOT ARM},
+    author={Sırma C. Yavuz},
+    year={2009},
+    note={\url{https://www.researchgate.net/profile/Mohamed_Mourad_Lafifi/post/how_to_calculate_the_angular_velocity_of_end_effector_of_two_link_robot_arm/attachment/59d6487c79197b80779a326c/AS\%3A467097353494532\%401488376095512/download/KINEMATIC+ANALYSIS+FOR+ROBOT+ARM+Thesis.pdf}}
+}
+
 
 
 
