Add baxter ipk, workspace and tool

--- a/references.bib
+++ b/references.bib
@@ -613,6 +613,27 @@
     note={\url{https://www.researchgate.net/profile/Mohamed_Mourad_Lafifi/post/how_to_calculate_the_angular_velocity_of_end_effector_of_two_link_robot_arm/attachment/59d6487c79197b80779a326c/AS\%3A467097353494532\%401488376095512/download/KINEMATIC+ANALYSIS+FOR+ROBOT+ARM+Thesis.pdf}}
 }
 
+@misc{cite_robot_academy, 
+    title={Robot Workspace},
+    author="{Robot Academy}",
+    year={n.d.},
+    note={\url{https://robotacademy.net.au/lesson/robot-workspace/}}
+}
+
+@misc{cite_autodesk_fusion, 
+    title={Fusion 360: Integrated CAD, CAM, CAE, and PCB software},
+    author="{Autodesk}",
+    year={2021},
+    note={\url{https://www.autodesk.com/products/fusion-360/overview}}
+}
+
+@misc{cite_3d_printer_for_tool, 
+    title={Ender-3 V2 3D Printer},
+    author="{Creality}",
+    year={2021},
+    note={\url{https://www.creality.com/goods-detail/ender-3-v2-3d-printer}}
+}
+
 
 
 
